@@ -48,6 +48,7 @@ Bug fixes
  - [web] fixed server-side CSS sanitization of messages (#4366)
  - [web] cards list not accessible when changing address book in expanded card view
  - [web] added missing subject to junk/not junk reports
+ - [web] fixed file uploader URL in mail editor
  - [eas] hebrew folders encoding problem using EAS (#4240)
  - [eas] avoid sync requests for shared folders every second (#4275)
 
